--- a/archives/zhihu-questions/2023-11-10.md
+++ b/archives/zhihu-questions/2023-11-10.md
@@ -1,55 +1,63 @@
 # 2023-11-10
 
-共 136 条
+共 142 条
 
 <!-- BEGIN ZHIHUQUESTIONS -->
-<!-- 最后更新时间 Fri Nov 10 2023 18:00:48 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Nov 10 2023 19:00:35 GMT+0800 (China Standard Time) -->
 1. [报告称超 9 成回国留学生面临求职压力，专家建议「留学生降低薪资期待」，如何看待此事？留学还有必要吗?](https://www.zhihu.com/question/629699666)
 1. [周芷若只给张无忌喂饭过一次，后面张无忌见她却说“汉水舟中喂饭之德，永不敢忘”，这话是不是说的太重了？](https://www.zhihu.com/question/576349950)
-1. [如何评价《洛基》第二季第六集（大结局）？](https://www.zhihu.com/question/629709513)
 1. [石油真的是远古动物尸体来的吗？](https://www.zhihu.com/question/620169590)
-1. [有哪些我国的行政区划冷知识?](https://www.zhihu.com/question/608924712)
-1. [如何评价游戏《明日方舟：终末地》？](https://www.zhihu.com/question/628008543)
-1. [11 月 10 日三大指数收跌，燃气股走强，算力概念股调整，超 2800 股下跌，如何看待今日行情？](https://www.zhihu.com/question/629699957)
+1. [理想汽车连续四个季度盈利，李想称面对华为 80% 学习、 20% 尊敬、零抱怨，哪些信息值得关注？](https://www.zhihu.com/question/629714980)
 1. [如何评价《崩坏：星穹铁道》千星纪游PV：「绥园伏鬼记」？](https://www.zhihu.com/question/629720432)
+1. [为什么肯吃苦的中国孩子到美国名校后，很少能够出类拔萃？](https://www.zhihu.com/question/624420476)
+1. [如果 S13 半决赛 T1 下路组再次拿出双射手组合，该怎么反制才最好？](https://www.zhihu.com/question/629257511)
+1. [班宇、陈春成等知名青年作家拟获武汉市文联所属事业单位聘用，如何看待此事？](https://www.zhihu.com/question/629450541)
+1. [美军参联会主席警告以色列「每一个加沙平民遇难，都可能催生新的哈马斯成员」，透露出哪些信息？](https://www.zhihu.com/question/629719694)
+1. [JDG和T1今年哪个胜算大一些？](https://www.zhihu.com/question/629346342)
 1. [考上了不喜欢城市的公务员，计划过5年服务期辞职，该怎么选择今后的职业方向？](https://www.zhihu.com/question/629377989)
-1. [石油到底是怎样来的？](https://www.zhihu.com/question/322214291)
-1. [2023年双十一洗烘套装如何选购？有没有万元左右的靠谱套装推荐？](https://www.zhihu.com/question/629251136)
-1. [平台重要还是能力重要？](https://www.zhihu.com/question/40946829)
-1. [垂钓新手入门，请教怎么挑选垂钓好货？](https://www.zhihu.com/question/629723968)
-1. [为什么铲屎官和猫说话时，会不自觉的用「夹子音」？](https://www.zhihu.com/question/628667357)
+1. [美驻中东国家外交官警告拜登政府「我们正失去一代阿拉伯民众」，如何解读？美国对以色列的支持是否会动摇？](https://www.zhihu.com/question/629726199)
 1. [现在手机的拍照功能究竟怎么样？跟数码相机差距大吗？](https://www.zhihu.com/question/628382235)
-1. [用户吐槽手机软件广告称「手一抖就跳到广告、点关闭仍跳转到广告」，如何看待此事？让人反感的流量有意义吗？](https://www.zhihu.com/question/629412478)
+1. [做什么才能活的非常健康？](https://www.zhihu.com/question/628972010)
 1. [哪一个瞬间智能家居让你觉得很有「安全感」?](https://www.zhihu.com/question/627374502)
-1. [你认为《原神》芙宁娜的强度如何？](https://www.zhihu.com/question/629590555)
-1. [为什么好多学校都喜欢挖个湖？](https://www.zhihu.com/question/268227369)
-1. [央行回应网友建议取消跨行取现手续费，称「将配合有关部门研究」，哪些信息值得关注？](https://www.zhihu.com/question/629585321)
-1. [你读过的书里，最让你受益的一句话是什么？](https://www.zhihu.com/question/629443726)
+1. [用户吐槽手机软件广告称「手一抖就跳到广告、点关闭仍跳转到广告」，如何看待此事？让人反感的流量有意义吗？](https://www.zhihu.com/question/629412478)
+1. [《甄嬛传》为什么华妃这个角色看起来不那么招人喜欢？](https://www.zhihu.com/question/511219325)
+1. [11 月 10 日三大指数收跌，燃气股走强，算力概念股调整，超 2800 股下跌，如何看待今日行情？](https://www.zhihu.com/question/629699957)
+1. [如何评价游戏《明日方舟：终末地》？](https://www.zhihu.com/question/628008543)
 1. [中山二院博士黄某所患的「SMARCB1 缺失型癌」有多严重？为什么说很罕见？](https://www.zhihu.com/question/629414943)
-1. [哪些口红/唇釉是你化妆包里的「常驻选手」？](https://www.zhihu.com/question/628953771)
-1. [《三体》雷迪亚兹的方法为什么受到民众这么大的厌恶?](https://www.zhihu.com/question/629068945)
-1. [为什么一看见领导我就胆怯呢？我该怎么在一群领导面前表现的不怯场呢？](https://www.zhihu.com/question/629570265)
+1. [央行回应网友建议取消跨行取现手续费，称「将配合有关部门研究」，哪些信息值得关注？](https://www.zhihu.com/question/629585321)
+1. [2023年双十一洗烘套装如何选购？有没有万元左右的靠谱套装推荐？](https://www.zhihu.com/question/629251136)
+1. [如何评价《洛基》第二季第六集（大结局）？](https://www.zhihu.com/question/629709513)
+1. [家居博主的装修真的很贵吗？普通人如何趁双 11 低价复刻？](https://www.zhihu.com/question/629706103)
+1. [有哪些我国的行政区划冷知识?](https://www.zhihu.com/question/608924712)
+1. [平台重要还是能力重要？](https://www.zhihu.com/question/40946829)
+1. [为什么铲屎官和猫说话时，会不自觉的用「夹子音」？](https://www.zhihu.com/question/628667357)
+1. [你认为《原神》芙宁娜的强度如何？](https://www.zhihu.com/question/629590555)
 1. [华为智界 S7 开启预售，25.8 万元起，余承东称标准、长航等四个版本都是亏钱的，哪些信息值得关注？](https://www.zhihu.com/question/629656902)
-1. [外媒称以色列同意在加沙地带进行「战术性局部」停火，如何看待这一行为？当前局势如何？](https://www.zhihu.com/question/629697915)
+1. [为什么好多学校都喜欢挖个湖？](https://www.zhihu.com/question/268227369)
+1. [哪些口红/唇釉是你化妆包里的「常驻选手」？](https://www.zhihu.com/question/628953771)
+1. [你读过的书里，最让你受益的一句话是什么？](https://www.zhihu.com/question/629443726)
+1. [《三体》雷迪亚兹的方法为什么受到民众这么大的厌恶?](https://www.zhihu.com/question/629068945)
 1. [S13 半决赛 JDG 与 WBG 在各自半区分别选择红色及蓝色方，为什么不都选择胜率更高的蓝方呢？](https://www.zhihu.com/question/629582861)
+1. [为什么一看见领导我就胆怯呢？我该怎么在一群领导面前表现的不怯场呢？](https://www.zhihu.com/question/629570265)
+1. [外媒称以色列同意在加沙地带进行「战术性局部」停火，如何看待这一行为？当前局势如何？](https://www.zhihu.com/question/629697915)
 1. [留一句话给三年后的你，你会说什么呢?](https://www.zhihu.com/question/629646332)
 1. [2023 年双十一，有什么值得买的家装好物？](https://www.zhihu.com/question/629378203)
 1. [一个人该怎么运动，才能保持年轻？](https://www.zhihu.com/question/578290862)
-1. [为什么玩乐器的人都不喜欢让别人碰自己的乐器？](https://www.zhihu.com/question/377421755)
 1. [四川雅安一油罐车发生爆燃，已致 2 死 2 伤，目前救援情况如何？危化品运输车运输中有哪些注意事项？](https://www.zhihu.com/question/629382668)
 1. [准备买空调，有什么很好用的品牌值得推荐？](https://www.zhihu.com/question/627941488)
 1. [如何评价漫威电影《惊奇队长 2》（The Marvels）？](https://www.zhihu.com/question/629159066)
-1. [如何评价《原神》最新的 4.2版本「罪人舞步旋」？](https://www.zhihu.com/question/629591894)
+1. [为什么玩乐器的人都不喜欢让别人碰自己的乐器？](https://www.zhihu.com/question/377421755)
 1. [炒股你用了多久稳定盈利？](https://www.zhihu.com/question/628505303)
-1. [哪些细节让你看出一个人的人品?](https://www.zhihu.com/question/624366476)
-1. [如何看待5G赋能大山中的企业数字化转型？在实际应用场景中5G又发挥着怎样的作用？](https://www.zhihu.com/question/629592612)
-1. [美军参联会主席警告以色列「每一个加沙平民遇难，都可能催生新的哈马斯成员」，透露出哪些信息？](https://www.zhihu.com/question/629719694)
-1. [理想汽车连续四个季度盈利，李想称面对华为 80% 学习、 20% 尊敬、零抱怨，哪些信息值得关注？](https://www.zhihu.com/question/629714980)
-1. [美驻中东国家外交官警告拜登政府「我们正失去一代阿拉伯民众」，如何解读？美国对以色列的支持是否会动摇？](https://www.zhihu.com/question/629726199)
-1. [是不是可以增加【电】字旁？](https://www.zhihu.com/question/626655295)
-1. [23-24 赛季 NBA勇士 105:108 掘金，如何评价这场比赛？](https://www.zhihu.com/question/629564916)
 1. [缅甸北部多地爆发武装冲突，外交部和中国驻缅甸使领馆提醒中国公民暂勿前往，哪些信息值得关注？](https://www.zhihu.com/question/629702318)
 1. [央行发文，将适时调整优化房地产政策，促进房地产市场平稳健康发展，具有哪些意义？](https://www.zhihu.com/question/629622586)
+1. [如何评价《原神》最新的 4.2版本「罪人舞步旋」？](https://www.zhihu.com/question/629591894)
+1. [是不是可以增加【电】字旁？](https://www.zhihu.com/question/626655295)
+1. [如果唐僧脾气暴躁、撸胳膊挽袖子自己主动打妖怪，那孙悟空在取经团队中会有怎样的变化？](https://www.zhihu.com/question/374876936)
+1. [哪些细节让你看出一个人的人品?](https://www.zhihu.com/question/624366476)
+1. [石油到底是怎样来的？](https://www.zhihu.com/question/322214291)
+1. [垂钓新手入门，请教怎么挑选垂钓好货？](https://www.zhihu.com/question/629723968)
+1. [如何看待5G赋能大山中的企业数字化转型？在实际应用场景中5G又发挥着怎样的作用？](https://www.zhihu.com/question/629592612)
+1. [23-24 赛季 NBA勇士 105:108 掘金，如何评价这场比赛？](https://www.zhihu.com/question/629564916)
 1. [网友自嘲「长期躺着偶尔翻身，脂肪含量高，压力大会爆」，正式被确诊为烤肠，如何看待该状态？如何自我调整？](https://www.zhihu.com/question/629592179)
 1. [计算机等级考试和软考哪个更有用？](https://www.zhihu.com/question/23524169)
 1. [《知否》里明兰为什么不把蓉姐记在自己名下？](https://www.zhihu.com/question/490369433)
@@ -89,7 +97,6 @@
 1. [为什么《崩坏：星穹铁道》中仙舟人不使用热兵器？](https://www.zhihu.com/question/629440291)
 1. [厨房装修应该选择蒸烤一体集成灶吗？它究竟有哪些实用的功能？](https://www.zhihu.com/question/496811832)
 1. [如果把你的前 20 年拍成一部剧，剧名会叫什么？](https://www.zhihu.com/question/629443628)
-1. [如果唐僧脾气暴躁、撸胳膊挽袖子自己主动打妖怪，那孙悟空在取经团队中会有怎样的变化？](https://www.zhihu.com/question/374876936)
 1. [如何看待2023年11月9日A股市场情况？](https://www.zhihu.com/question/629558584)
 1. [何小鹏再发文谈 AEB 争议，称感谢余承东的建议和大度，哪些信息值得关注？](https://www.zhihu.com/question/629573309)
 1. [媒体三问「中山二院乳腺外科团队多人致癌」事件，是否是「毒试剂」致癌？此事还有哪些疑点？](https://www.zhihu.com/question/629566268)
@@ -97,7 +104,6 @@
 1. [如何评价《原神》4.2 新剧情？](https://www.zhihu.com/question/629552870)
 1. [C 罗的运球水平属于什么水准？](https://www.zhihu.com/question/614405988)
 1. [S13的四种结局，哪个在你心中份量最重？](https://www.zhihu.com/question/629576868)
-1. [家居博主的装修真的很贵吗？普通人如何趁双 11 低价复刻？](https://www.zhihu.com/question/629706103)
 1. [美国公布巴以冲突后加沙管治设想，称由巴勒斯坦人主导治理，加沙应与约旦河西岸地区统一，如何看待这一设想？](https://www.zhihu.com/question/629606205)
 1. [中山二院回应网络系统升级，称「此前测评需整改，与网络热议无关」，有哪些信息值得关注？](https://www.zhihu.com/question/629586051)
 1. [10 篇论文齐发宣布科学家已人工合成酵母全部 16 条染色体，意味着什么？离「人造生命」还有多远？](https://www.zhihu.com/question/629568069)
